- update title and link for product detail page

--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>About</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - ABOUT</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/en/about/" />
   <meta property="og:locale" content="en_US" />
