--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Partner</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - PARTNER</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/en/partner/" />
   <meta property="og:locale" content="en_US" />
