--- a/src/en/product/nong-san-nguyen-lieu-tho-en.ejs
+++ b/src/en/product/nong-san-nguyen-lieu-tho-en.ejs
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>FEED COMMODITIES</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - FEED COMMODITIES</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="en_US" />
   <meta property="og:locale:alternate" content="vi_VN" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="FEED COMMODITIES" />
   <meta property="og:url" content="/en/product/nguyen-lieu-thuc-an-chan-nuoi-en/" />
-  <meta property="og:site_name" content="VIET-ACC" />
+  <meta property="og:site_name" content="MINH ANH GROUP" />
   <meta property="og:image" content="" />
   <meta property="og:image:secure_url"
     content="" />
