--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Giới Thiệu</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - GIỚI THIỆU</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/gioi-thieu/" />
   <meta property="og:locale" content="vi_VN" />
