--- a/src/nghe-nghiep.ejs
+++ b/src/nghe-nghiep.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Nghề Nghiệp</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - NGHỀ NGHIỆP</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:locale:alternate" content="en_US" />
