--- a/src/san-pham/premix-vitamin-khoang.ejs
+++ b/src/san-pham/premix-vitamin-khoang.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>PREMIX VITAMIN - KHOÁNG</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - PREMIX VITAMIN - KHOÁNG</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:locale:alternate" content="en_US" />
@@ -119,10 +119,10 @@
                                       <div class="text_tintuc_detail_1">
                                         <h4>Kiến Thức Chăn Nuôi</h4>
                                         <h3><a
-                                            href="https://www.viet-acc.com/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/">6
+                                            href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">6
                                             bước trong lập công thức thức ăn chăn nuôi</a></h3>
                                         <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20
-                                          Tháng Sáu | 2018</div>
+                                          Tháng Sáu | 2020</div>
                                         <p>Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên
                                           mới ra trường mà ngay cả đối với một số chuyên gia, những người đôi khi mới
                                           đụng chạm đến vấn đề này.</p>
@@ -136,10 +136,10 @@
                                       <div class="text_tintuc_detail_1">
                                         <h4>Kiến Thức Chăn Nuôi</h4>
                                         <h3><a
-                                            href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/">Có
+                                            href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html/">Có
                                             thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h3>
                                         <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20
-                                          Tháng Sáu | 2018</div>
+                                          Tháng Sáu | 2020</div>
                                         <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất
                                           chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này
                                           giải thích lý do vì sao vitamin E rất quan trọng đối với&#8230;</p>
@@ -153,10 +153,10 @@
                                       <div class="text_tintuc_detail_1">
                                         <h4>Kiến Thức Chăn Nuôi</h4>
                                         <h3><a
-                                            href="https://www.viet-acc.com/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con/">Kiểm
+                                            href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                             soát giá trị đệm trong thức ăn heo con</a></h3>
                                         <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20
-                                          Tháng Sáu | 2018</div>
+                                          Tháng Sáu | 2020</div>
                                         <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng
                                           đệm của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp;
                                           Trong bất kỳ hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
