--- a/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>6 bước trong lập công thức thức ăn chăn nuôi</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - 6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="6 bước trong lập công thức thức ăn chăn nuôi" />
+  <meta property="og:title" content="6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI" />
   <meta property="og:description"
     content="Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới ra trường mà ngay cả đối với một số chuyên gia, những người đôi khi mới đụng chạm đến vấn đề này." />
   <meta property="og:url" content="/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/" />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
     content="Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới ra trường mà ngay cả đối với một số chuyên gia, những người đôi khi mới đụng chạm đến vấn đề này." />
-  <meta name="twitter:title" content="6 bước trong lập công thức thức ăn chăn nuôi" />
+  <meta name="twitter:title" content="6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI" />
   <meta name="twitter:image" content="" />
   <%- include('../partial/head.ejs') %>
 </head>
@@ -54,7 +54,7 @@
                       </div>
                     </div>
                     <div class="post_content_vietacc">
-                      <h3>6 bước trong lập công thức thức ăn chăn nuôi</h3>
+                      <h3>6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020
                       </div>
                       <div class="noidung-s">
