--- a/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? - Minh Anh Group</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - CÓ THỂ CẮT GIẢM HOẶC THAY THẾ VITAMIN E TRONG THỨC ĂN CHĂN NUÔI ?</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? - Minh Anh Group" />
+  <meta property="og:title" content="CÓ THỂ CẮT GIẢM HOẶC THAY THẾ VITAMIN E TRONG THỨC ĂN CHĂN NUÔI ?" />
   <meta property="og:description"
     content="Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do vì sao vitamin E rất quan trọng đối với sức khỏe và sự tăng trưởng của động vật." />
   <meta property="og:url" content="/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/" />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
     content="Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do vì sao vitamin E rất quan trọng đối với sức khỏe và sự tăng trưởng của động vật." />
-  <meta name="twitter:title" content="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? - Minh Anh Group" />
+  <meta name="twitter:title" content="CÓ THỂ CẮT GIẢM HOẶC THAY THẾ VITAMIN E TRONG THỨC ĂN CHĂN NUÔI ?" />
   <meta name="twitter:image" content="" />
   <%- include('../partial/head.ejs') %>
 </head>
