--- a/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
+++ b/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" />
+  <meta property="og:title" content="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH" />
   <meta property="og:description"
     content="Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến đã khẳng định rằng cải thiện dinh dưỡng cho heo nái vào những giai đoạn then chốt trong chu kỳ sinh sản sẽ giúp tăng trọng lượng sơ sinh và sức sống của heo con." />
   <meta property="og:url" content="/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/" />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
     content="Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến đã khẳng định rằng cải thiện dinh dưỡng cho heo nái vào những giai đoạn then chốt trong chu kỳ sinh sản sẽ giúp tăng trọng lượng sơ sinh và sức sống của heo con." />
-  <meta name="twitter:title" content="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" />
+  <meta name="twitter:title" content="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH" />
   <meta name="twitter:image" content="" />
   <%- include('../partial/head.ejs') %>
 </head>
@@ -54,7 +54,7 @@
                       </div>
                     </div>
                     <div class="post_content_vietacc">
-                      <h3>Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh</h3>
+                      <h3>ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020</div>
                       <p><strong>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến đã khẳng định rằng cải thiện dinh dưỡng cho heo nái vào những giai đoạn then chốt trong chu kỳ sinh sản sẽ giúp tăng trọng lượng sơ sinh và sức sống của heo con.</strong></p>
                       <p>Tỷ lệ sống trung bình của heo con ở Châu Âu là 83%, dao động từ 70% – 90%. Con số này bị ảnh hưởng bởi số lượng thai chết lưu và tỷ lệ tử vong trước khi cai sữa trong một lứa sinh. Nếu chúng ta có thể làm giảm tỷ lệ của 2 nguyên nhân này trong lứa sinh thì khả năng sống sẽ tăng lên, thúc đẩy hiệu suất của heo nái và phúc lợi cho heo con.</p>
@@ -62,7 +62,7 @@
                       <p><a href="/assets/img/tin-tuc/heo-nai-de.png"><img class="aligncenter wp-image-17214 size-full" 
                         src="/assets/img/tin-tuc/heo-nai-de.png" 
                         sizes="(max-width: 469px) 100vw, 469px" 
-                        srcset="/assets/img/tin-tuc/heo-nai-de.png 469w, /assets/img/tin-tuc/heo-nai-de-300x192.png 300w" alt="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" width="469" height="300"></a></p>
+                        srcset="/assets/img/tin-tuc/heo-nai-de.png 469w, /assets/img/tin-tuc/heo-nai-de-300x192.png 300w" alt="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH" width="469" height="300"></a></p>
                       <p><em>Sức sống của heo con có thể được cải thiện bằng cách cung cấp đầy đủ dinh dưỡng cho heo mẹ trong giai gần sinh con, giai đoạn chuyển tiếp từ lúc mang thai sang nuôi con.</em></p>
                       <p>&nbsp;</p>
                       <p><strong>Đáp ứng với những thách thức trong quá trình chuyển tiếp</strong></p>
@@ -76,7 +76,7 @@
                       <p><a href="/assets/img/tin-tuc/hinh-1-chuyen-tiep-heo-con.png"><img class="aligncenter wp-image-17215 size-full" 
                         src="/assets/img/tin-tuc/hinh-1-chuyen-tiep-heo-con.png" 
                         sizes="(max-width: 469px) 100vw, 469px" 
-                        srcset="/assets/img/tin-tuc/hinh-1-chuyen-tiep-heo-con.png 469w, /assets/img/tin-tuc/hinh-1-chuyen-tiep-heo-con-300x224.png 300w" alt="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" width="469" height="350"></a></p>
+                        srcset="/assets/img/tin-tuc/hinh-1-chuyen-tiep-heo-con.png 469w, /assets/img/tin-tuc/hinh-1-chuyen-tiep-heo-con-300x224.png 300w" alt="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH" width="469" height="350"></a></p>
                       <p><strong>1. Bắt đầu giai đoạn chuyển tiếp</strong></p>
                       <p>Giai đoạn chuyển tiếp bắt đầu từ tuần lễ trước khi nái sinh con. Quá trình trao đổi chất ở nái lúc này chuyển từ trạng thái đồng hóa sang dị hóa, hỗ trợ sự phát triển ở mức cao của bào thai, chuẩn bị cho cơ thể để sinh con, sản xuất sữa non và nuôi con từ sớm.</p>
                       <p><strong>2. Giai đoạn sinh con</strong></p>
@@ -91,7 +91,7 @@
                       <p><a href="/assets/img/tin-tuc/hinh-2-heo-nai.png"><img class="aligncenter wp-image-17216 size-full" 
                         src="/assets/img/tin-tuc/hinh-2-heo-nai.png" 
                         sizes="(max-width: 469px) 100vw, 469px" 
-                        srcset="/assets/img/tin-tuc/hinh-2-heo-nai.png 469w, /assets/img/tin-tuc/hinh-2-heo-nai-300x174.png 300w" alt="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" width="469" height="272"></a></p>
+                        srcset="/assets/img/tin-tuc/hinh-2-heo-nai.png 469w, /assets/img/tin-tuc/hinh-2-heo-nai-300x174.png 300w" alt="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH" width="469" height="272"></a></p>
                       <p><strong>Cải thiện chế độ dinh dưỡng</strong></p>
                       <p>&nbsp;</p>
                       <p>Cải thiện chế độ dinh dưỡng cho nái từ lúc cai sữa đến động dục lại cũng có thể mang lại lợi ích đối với khả năng sống của heo con về sau. Đây là giai đoạn từ 4 – 6 ngày khi nái đang phục hồi sau thời kỳ nuôi con và chuẩn bị lên giống lại. Một chế độ dinh dưỡng tốt hơn có thể cải thiện chất lượng sản xuất trứng; điểm khởi đầu cho một lứa sinh chất lượng đồng nhất.</p>
@@ -102,7 +102,7 @@
                       <p><a href="/assets/img/tin-tuc/hinh-3-heo-nai.png"><img class="aligncenter wp-image-17217 size-full" 
                         src="/assets/img/tin-tuc/hinh-3-heo-nai.png"
                          sizes="(max-width: 469px) 100vw, 469px" 
-                         srcset="/assets/img/tin-tuc/hinh-3-heo-nai.png 469w, /assets/img/tin-tuc/hinh-3-heo-nai-300x225.png 300w" alt="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" width="469" height="351"></a></p>
+                         srcset="/assets/img/tin-tuc/hinh-3-heo-nai.png 469w, /assets/img/tin-tuc/hinh-3-heo-nai-300x225.png 300w" alt="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH" width="469" height="351"></a></p>
                       <p><strong>Kết luận</strong></p>
                       <p>&nbsp;</p>
                       <p>Trong thập kỷ qua, trung bình kích thước lứa sinh ở nhiều nái đã tăng hơn 30%. Số lượng heo con cai sữa không theo kịp thách thức sống còn về sau cũng tăng lên. Việc lựa chọn giống vật nuôi di truyền, quản lý và vệ sinh góp phần tăng khả năng sống sót của heo con. Áp dụng một chiến lược dinh dưỡng cụ thể cho heo nái từ giai cai sữa cho đến thời điểm động dục lại, và trong giai đoạn chuyển tiếp từ thời kỳ mang thai sang nuôi con giúp cải thiện hiệu suất của heo nái vượt bậc.</p>
@@ -165,7 +165,7 @@
                             <li>
                               <div class="Post-image">
                                 <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
-                                  title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh thumbnail="" ><img width="
+                                  title="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH thumbnail="" ><img width="
                                   664" height="524" src="/assets/img/tin-tuc/tin_4.png"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
                                   srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
