--- a/src/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.ejs
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG TY</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty" />
+  <meta property="og:title" content="KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG TY" />
   <meta property="og:description"
     content="Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do vì sao vitamin E rất quan trọng đối với…" />
   <meta property="og:url" content="/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/" />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
     content="Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do vì sao vitamin E rất quan trọng đối với…" />
-  <meta name="twitter:title" content="Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty" />
+  <meta name="twitter:title" content="KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG TY" />
   <meta name="twitter:image" content="" />
   <%- include('../partial/head.ejs') %>
 </head>
@@ -54,7 +54,7 @@
                       </div>
                     </div>
                     <div class="post_content_vietacc">
-                      <h3>Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</h3>
+                      <h3>KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG TY</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020</div>
                       <p><strong>Chất lượng đi cùng giá trị dinh dưỡng phù hợp, đồng thời, tận dụng tốt nhất nguồn nguyên liệu thay đổi liên tục - sản xuất thức ăn chăn nuôi luôn cần có một cái đầu tỉnh táo và khả năng ra quyết định nhanh nhẹn.</strong></p>
                       <p>&nbsp;</p>
@@ -167,7 +167,7 @@
                             <li>
                               <div class="Post-image">
                                 <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
-                                  title="Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty thumbnail=" ><img width=" 800"
+                                  title="KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG TY thumbnail=" ><img width=" 800"
                                   height="560"
                                   src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
