--- a/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
+++ b/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Kiểm soát giá trị đệm trong thức ăn heo con</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Kiểm soát giá trị đệm trong thức ăn heo con" />
+  <meta property="og:title" content="KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON" />
   <meta property="og:description"
     content="Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg." />
   <meta property="og:url" content="/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/" />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
     content="Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg." />
-  <meta name="twitter:title" content="Kiểm soát giá trị đệm trong thức ăn heo con" />
+  <meta name="twitter:title" content="KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON" />
   <meta name="twitter:image" content="" />
   <%- include('../partial/head.ejs') %>
 </head>
@@ -54,7 +54,7 @@
                       </div>
                     </div>
                     <div class="post_content_vietacc">
-                      <h3>Kiểm soát giá trị đệm trong thức ăn heo con</h3>
+                      <h3>KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020</div>
                       <p><strong>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg.</strong></p>
                       <p>&nbsp;</p>
@@ -110,7 +110,7 @@
                             <li>
                               <div class="Post-image">
                                 <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
-                                  title="Kiểm soát giá trị đệm trong thức ăn heo con thumbnail=" ><img width=" 800"
+                                  title="KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON thumbnail=" ><img width=" 800"
                                   height="560"
                                   src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
