--- a/src/en/product/nguyen-lieu-thuc-pham-my-pham-en.ejs
+++ b/src/en/product/nguyen-lieu-thuc-pham-my-pham-en.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>INGERDIENT FOR PRODUCING FOODS - COSMETICS</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - INGERDIENT FOR PRODUCING FOODS - COSMETICS</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="en_US" />
   <meta property="og:locale:alternate" content="vi_VN" />
