--- a/src/lien-he.ejs
+++ b/src/lien-he.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Liên Hệ</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - LIÊN HỆ</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/lien-he/" />
   <meta property="og:locale" content="vi_VN" />
