--- a/src/san-pham.ejs
+++ b/src/san-pham.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Sản Phẩm</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - SẢN PHẨM</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/san-pham/" />
   <meta property="og:locale" content="vi_VN" />
