--- a/src/tin-tuc-su-kien.ejs
+++ b/src/tin-tuc-su-kien.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Tin Tức Sự Kiện</title>
+  <title>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH - TIN TỨC SỰ KIỆN</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <link rel="canonical" href="/tin-tuc-su-kien/" />
   <meta property="og:locale" content="vi_VN" />
