add page bat-dong-san

--- a/src/bat-dong-san.ejs
+++ b/src/bat-dong-san.ejs
@@ -58,7 +58,140 @@
                     <div class="wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
+                          <h2 class="title_header">DỰ ÁN BẤT ĐỘNG SẢN NHÀ ĐẤT VIỆT NAM 2023</h2>
+                          <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
+                          <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất 2021. Tại đây <span style="color:#ff0000;"><strong>
+                            CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất năm 2023.</p></div>
+                          <div class="row">
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                              <div class="single-property"> <span>Đang triển khai</span>
+                                <div class="property-img"> <a
+                                    href="/bds/vinhomes-golden-avenue-mong-cai.html"><img
+                                      src="/assets/img/bds/vinhomes-golden-avenue-31-370x290.jpg"
+                                      alt="Vinhomes Golden Avenue Móng Cái "></a>
+                                  <div class="logo-caption"><span></span></div>
+                                  <div class="property-desc-top">
+                                    <h2><a class="name_product"
+                                        href="/bds/vinhomes-golden-avenue-mong-cai.html">Vinhomes Golden Avenue
+                                        Móng Cái </a></h2>
+                                    <div class="property-location">
+                                      <p>Bắc Luân II - phường Hải Hòa -...</p>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="property-desc">
+                                  <p>Vinhomes Móng Cái - Vinhomes Golden Avenue, siêu phẩm mới của chủ đầu tư Vinhomes triển khai xây
+                                    dựng tại khu...</p>
+                                  <div class="property-desc-bottom">
+                                    <div class="property-bottom-list">
+                                      <ul>
+                                        <li> <img src="/assets/img/bds/icon-6.png" alt="icon dien tich" /> <span>50-200m2</span> </li>
+                                        <li> <img src="/assets/img/bds/icon-7.png" alt="icon phong ngu" /> <span>2-4</span> </li>
+                                        <li> <img src="/assets/img/bds/icon-8.png" alt="icon phong tam" /> <span>1-3</span> </li>
+                                      </ul>
+                                    </div>
+                                  </div>
+                                  <div class="property-meta">
+                                    <div class="row">
+                                      <div class="col-md-6 col-sm-6 col-xs-6">
+                                        <div class="price">Đang cập nhật</div>
+                                      </div>
+                                      <div class="col-md-6 col-sm-6 col-xs-6"> <a
+                                          href="/bds/vinhomes-golden-avenue-mong-cai.html">Xem chi tiết</a>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                              <div class="single-property"> <span>Đang triển khai</span>
+                                <div class="property-img"> <a href="/bds/vinhomes-golden-avenue-mong-cai.html"><img
+                                      src="/assets/img/bds/glory-heights-31-370x290.jpg" alt="Glory Heights "></a>
+                                  <div class="logo-caption"><span></span></div>
+                                  <div class="property-desc-top">
+                                    <h2><a class="name_product" href="/bds/vinhomes-golden-avenue-mong-cai.html">Glory Heights
+                                      </a></h2>
+                                    <div class="property-location">
+                                      <p>Đường Nguyễn Xiển – phường Long...</p>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="property-desc">
+                                  <p>Glory Heights Vinhomes quận 9 - Đỉnh cao Vinh Quang cho cuộc sống sang trọng, tinh tế giao thoa
+                                    cùng sự đẳng cấp. </p>
+                                  <div class="property-desc-bottom">
+                                    <div class="property-bottom-list">
+                                      <ul>
+                                        <li> <img src="/assets/img/bds/icon-6.png" alt="icon dien tich" /> <span>27– 103m2</span> </li>
+                                        <li> <img src="/assets/img/bds/icon-7.png" alt="icon phong ngu" /> <span>1-3</span> </li>
+                                        <li> <img src="/assets/img/bds/icon-8.png" alt="icon phong tam" /> <span>1-2</span> </li>
+                                      </ul>
+                                    </div>
+                                  </div>
+                                  <div class="property-meta">
+                                    <div class="row">
+                                      <div class="col-md-6 col-sm-6 col-xs-6">
+                                        <div class="price">52 triệu đồng/m2</div>
+                                      </div>
+                                      <div class="col-md-6 col-sm-6 col-xs-6"> <a
+                                          href="/bds/vinhomes-golden-avenue-mong-cai.html">Xem chi tiết</a> </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                              <div class="single-property"> <span>Đang triển khai xây dựng</span>
+                                <div class="property-img"> <a href="/bds/vinhomes-golden-avenue-mong-cai.html"><img
+                                      src="/assets/img/bds/ecopark-nhon-trach-dong-nai-31-370x290.jpg"
+                                      alt="Eco Village Saigon River"></a>
+                                  <div class="logo-caption"><span></span></div>
+                                  <div class="property-desc-top">
+                                    <h2><a class="name_product"
+                                        href="/bds/vinhomes-golden-avenue-mong-cai.html">Eco Village Saigon
+                                        River</a></h2>
+                                    <div class="property-location">
+                                      <p>Ấp Bến Cộ - xã Đại Phước -...</p>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="property-desc">
+                                  <p> Ecopark Nhơn Trạch - công trình sinh thái với tổng diện tích 55 ha của tập đoàn Ecopark cung cấp
+                                    đa dạng...</p>
+                                  <div class="property-desc-bottom">
+                                    <div class="property-bottom-list">
+                                      <ul>
+                                        <li> <img src="/assets/img/bds/icon-6.png" alt="icon dien tich" /> <span></span> </li>
+                                        <li> <img src="/assets/img/bds/icon-7.png" alt="icon phong ngu" /> <span>1-4</span> </li>
+                                        <li> <img src="/assets/img/bds/icon-8.png" alt="icon phong tam" /> <span>1-3</span> </li>
+                                      </ul>
+                                    </div>
+                                  </div>
+                                  <div class="property-meta">
+                                    <div class="row">
+                                      <div class="col-md-6 col-sm-6 col-xs-6">
+                                        <div class="price">Đang cập nhật</div>
+                                      </div>
+                                      <div class="col-md-6 col-sm-6 col-xs-6"> <a
+                                          href="/bds/vinhomes-golden-avenue-mong-cai.html">Xem chi tiết</a> </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <ul class="pagination-box">
+                            <li class="active"><a class="active" href="javascript:void(0);">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#"">5</a></li>
+                            <li><a href="#">6</a></li>
+                            <li><a href="#">&gt;</a></li>
+                            <li><a href="#">Cuối</a></li>
+                          </ul>
+                          <!-- <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
                               <div class="  element_from_left">
@@ -370,7 +503,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -381,6 +514,16 @@
           </div>
 
         </div>
+      </div>
+      <div class="hotline-phone-ring-wrap">
+        <div class="hotline-phone-ring">
+          <div class="hotline-phone-ring-circle"></div>
+          <div class="hotline-phone-ring-circle-fill"></div>
+          <div class="hotline-phone-ring-img-circle"> <a href="tel:xxxxxxxx" class="pps-btn-img"> <img
+                src="/assets/img/bds/icon-call.png" alt="Gọi điện thoại" width="50" height="50" /> </a>
+          </div>
+        </div>
+        <div class="hotline-bar"> <a href="tel:xxxxxxxx"><span class="text-hotline">xxxxxxxx</span></a> </div>
       </div>
       <%- include('partial/footer.ejs', {lang: 'vi'}) %>
     </div>
